# RayTracingInOneWeekendChaptByChapt

./: .gitignore  In One Weekend.html  README.md  main
1-Ray Tracing in One Weekend/Code/: CMakeLists.txt  Code01.sln
1-Ray Tracing in One Weekend/Code/02_Output_PPM/: 02_Output_PPM.vcxproj
1-Ray Tracing in One Weekend/Code/04_Add_Rays/: 04_Add_Rays.vcxproj  04_Add_Rays.vcxproj.filters
1-Ray Tracing in One Weekend/Code/05_Adding_a_Sphere/: 05_Add_Sphere.vcxproj.filters
1-Ray Tracing in One Weekend/Code/05_Adding_a_Sphere/src/: vec3.h
1-Ray Tracing in One Weekend/Code/06_Surface_Normals_and_Multiple_Objects/src/: hittable.h  rtweekend.h  sphere.h
1-Ray Tracing in One Weekend/Code/07_Antialiasing/src/: hittable_list.h  main.cpp  sphere.h  vec3.h
1-Ray Tracing in One Weekend/Code/08_Diffuse_Materials/: 04_Diffuse_Materials.vcxproj
1-Ray Tracing in One Weekend/Code/09_Metal/: 05_Metal.vcxproj  05_Metal.vcxproj.filters
1-Ray Tracing in One Weekend/Code/09_Metal/src/: camera.h  vec3.h
1-Ray Tracing in One Weekend/Code/10_Dielectrics-Glass/: 06_Dielectrics-Glass.cpp
1-Ray Tracing in One Weekend/Code/10_Dielectrics-Glass/src/: sphere.h
1-Ray Tracing in One Weekend/Code/11_Positionable_Camera/: 07_Camera.vcxproj.filters
1-Ray Tracing in One Weekend/Code/11_Positionable_Camera/src/: main.cpp
1-Ray Tracing in One Weekend/Code/12_Defocus_Blur/src/: vec3.h
1-Ray Tracing in One Weekend/Code/13_Final_Render/: 08_Final_Render.vcxproj  08_Final_Render.vcxproj.filters
1-Ray Tracing in One Weekend/Code/13_Final_Render/src/: camera.h  hittable.h  main.cpp
1-Ray Tracing in One Weekend/Code/build_ubuntu/: .gitignore  02_Output_PPM  05_Add_Sphere  08_Diffuse_Materials-01.ppm  10_Dielectrics-Glass  13_Final_Render  Makefile
1-Ray Tracing in One Weekend/Code/build_ubuntu_clion/Debug/: 03_Add_Sphere
1-Ray Tracing in One Weekend/Code/build_ubuntu_clion/Release/: convert_pic_format.sh
1-Ray Tracing in One Weekend/Code/build_windows/: .gitignore  08_Final_Render.vcxproj  08_Final_Render.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Code01.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
1-Ray Tracing in One Weekend/Code/build_windows_clion/Debug/: .gitignore  image4.3.ppm  image4.6.ppm
1-Ray Tracing in One Weekend/code/Chpt01/Code01/: .gitignore  CMakeLists.txt  Code01.sln
2-The Next Week/Code/: .gitignore  CMakeLists.txt
2-The Next Week/Code/02_Motion_Blur/src/: camera.h  main.cpp  material.h  moving_sphere.h  sphere.h
2-The Next Week/Code/03_BVH/: .gitignore
2-The Next Week/Code/03_BVH/src/: aabb.h  bvh.h  camera.h  main.cpp  sphere.h
2-The Next Week/Code/04_Solid_Textures/src/: color.h  hittable.h  hittable_list.h  main.cpp  material.h  rtweekend.h  sphere.h  texture.h
2-The Next Week/Code/05_Perlin_Noise/src/: camera.h  hittable.h  main.cpp  material.h  perlin.h  rtweekend.h  sphere.h  texture.h
2-The Next Week/Code/06_Image_Texture/src/: main.cpp  perlin.h  rtw_stb_image.h
2-The Next Week/Code/07_Rectangles_and_Lights/src/: aarect.h  main.cpp
2-The Next Week/Code/08_Instances/src/: hittable.h  main.cpp  moving_sphere.h
2-The Next Week/Code/09_Volumes/src/: aarect.h  constant_medium.h  hittable_list.h  main.cpp  material.h
2-The Next Week/Code/10_Final_Scene/src/: box.h  bvh.h  hittable.h  main.cpp  material.h  moving_sphere.h  ray.h  rtweekend.h  texture.h
2-The Next Week/Code/build_ubuntu/: .gitignore  02_Motion_Blur  CMakeCache.txt  Makefile  cmake_install.cmake
2-The Next Week/Code/build_ubuntu_clion/Debug/: 02_Motion_Blur  03_BVH  03_BVH_Debug_not_using_bvh_in_main  03_BVH_Debug_using_bvh_in_main  04_Solid_Textures  05_Perlin_Noise  06_Image_Texture
2-The Next Week/Code/build_ubuntu_clion/Release/: .fuse_hidden00000a7f00000001  03_BVH_05_Release_still_red  03_BVH_Release_using_bvh_in_main  03_BVH_modify_lower_left_corner_with_focus_dist_in_camera  04_Solid_Textures_Listing_28_Second_scene-Image_3-Checkered_spheres  05_Perlin_Noise_Hashed_Random_Texture_01_frequency==4  05_Perlin_Noise_Image_13_Perlin_noise_marbled_texture  05_Perlin_Noise_Image_13_Perlin_noise_marbled_texture_width==2000  05_Perlin_Noise_Image_13_Perlin_noise_marbled_texture_width==400  05_Perlin_Noise_Image_13_Perlin_noise_marbled_texture_width==400.ppm  05_Perlin_Noise_Tiled_random_patterns_grey_03  05_Perlin_Noise_Tiled_random_patterns_grey_04_by_%6  05_Perlin_Noise_Tiled_random_patterns_grey_08_using_3d-indexed_color_texture  05_Perlin_Noise_Tiled_random_patterns_grey_09_scale_by_4_instead_of_10  06_Image_Texture_Earth-Mapped_Sphere_01  06_Image_Texture_Earth-Mapped_Sphere_02_using_hight_res_texture  07_Rectangles_and_Lights_02_Image_17_Scene_with_rectangle_and_sphere_light source  07_Rectangles_and_Lights_04_Image_18_Empty_Cornell_box_max_depth=50_spp=500  07_Rectangles_and_Lights_05_Image_18_Empty_Cornell_box_max_depth=200_spp=500  07_Rectangles_and_Lights_06_Image_18_Empty_Cornell_box_max_depth=50_spp=5000  07_Rectangles_and_Lights_Image_16_Scene_with_rectangle_light source  08_Instances_03_Image_20_Standard_cornell_box_with_two_Y_rotated_boxes  09_Volumes_01_imgWidth=600_ssp=200  09_Volumes_01_imgWidth=600_ssp=200.ppm  09_Volumes_02_imgWidth=600_ssp=2000  09_Volumes_02_imgWidth=600_ssp=2000.ppm  10_Final_Scene_01  10_Final_Scene_02_perlin_scale=0.2_camera_moved  10_Final_Scene_03_perlin_scale=2_blue_inner_added  10_Final_Scene_05_change_some_colors_01
2-The Next Week/Code/build_windows_clion/Release/: 03_BVH.ppm
2-The Next Week/Code/qt_ubuntu/build-Code-Desktop_Qt_6_6_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  02_Motion_Blur  03_BVH  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
2-The Next Week/Code/qt_ubuntu/build-Code-Desktop_Qt_6_6_0_GCC_64bit-Release/: .ninja_deps  .ninja_log  02_Motion_Blur  03_BVH  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
3-The Rest Of Your Life/Code/: .gitignore  CMakeLists.txt
3-The Rest Of Your Life/Code/02_A_Simple_Monte_Carlo_Program/src/: pi.cpp
3-The Rest Of Your Life/Code/08_Orthonormal_Bases/src/: main.cpp  (+1 more)
(+398 files in other folders)
